<resources>
    <string name="app_name">BComfy</string>
    <string name="no_text" translatable="false">NO TEXT</string>
    <string name="tango_out_of_date_exception">Tango Service outdated!</string>
    <string name="tango_error">Error during measuring! Please try again from a different position or on another material.</string>
    <string name="tango_invalid">Tango Invalid Exception! Try again!</string>
    <string name="tango_no_pose">Lost orientation!\nPlease move the device around in order to allow for localization</string>
    <string name="no_permissions">Permission not granted!</string>
    <string name="gui_connect_bco">Connecting to BCO…</string>
    <string name="gui_update_adf">Updating Area Description…</string>
    <string name="gui_connect_tango">Connecting Tango Service…\nPlease hold the device upright!</string>
    <string name="gui_init_tango">Initializing Tango Service…</string>
    <string name="gui_init_tango_failed">Initializing of Tango Service failed!</string>
    <string name="gui_update_adf_failed">Location not initialized!</string>
    <string name="gui_cancel">Cancel</string>
    <string name="gui_apply">Apply</string>
    <string name="gui_add_room">Add\nRoom</string>
    <string name="gui_undo_measurement">Undo last\nmeasurement</string>
    <string name="gui_finish_room">Finish\nRoom</string>
    <string name="gui_finish_measuring">Finish\nMeasuring</string>
    <string name="init_mark_ground">Mark the ground by tapping the display at the according point</string>
    <string name="init_mark_ceiling">Mark the ceiling by tapping the display at the according point</string>
    <string name="init_mark_walls">Mark the walls by tapping the display at the according point</string>
    <string name="init_mark_walls_number_measurements"><![CDATA[ Mark the <b><font color=\'#d1e24a\'>%1$s</font></b> wall by tapping the display at the according point<br><br>This wall needs <b><font color=\'#d1e24a\'>%2$d</font></b> remaining taps]]></string>
    <string name="init_mark_walls_number_measurements_enough"><![CDATA[ Finish the measurement of the current room, or continue by tapping at the <b><font color=\'#d1e24a\'>%1$s</font></b> wall<br><br>The next wall would need <b><font color=\'#d1e24a\'>%2$d</font></b> taps]]></string>
    <string name="init_mark_walls_number"><![CDATA[ Mark the <b><font color=\'#d1e24a\'>%1$s</font></b> wall by tapping the display at the according point]]></string>
    <string name="init_mark_walls_number_enough"><![CDATA[ Finish the measurement of the current room, or continue by tapping at the <b><font color=\'#d1e24a\'>%1$s</font></b> wall]]></string>
    <string name="init_invalid_wall">Error! The room border needs to be perpendicular to the previous one.</string>
    <string name="init_too_close">Error! Too close to measured point. Please increase your distance.</string>
    <string name="relocate_instruction">Tap the display at the according point and confirm your modification</string>
    <string name="choose_location">Which location did you just measure?</string>
    <string name="choose_adf">Select the ADF</string>
    <string name="gui_scan_init">Create new environment</string>
    <string name="gui_scan_continue">Modify environment</string>
    <string name="gui_start_main_component">Start</string>
    <string name="gui_new_transform">Recalibrate</string>
    <string name="gui_retry">Retry</string>
    <string name="gui_settings">Settings</string>
    <string name="gui_publish_depth">Publish depth data</string>
    <string name="gui_record_adf">Record Local Area</string>
    <string name="gui_manage_adf">Manage Local Area</string>
    <string name="gui_updating_device_position">Updating position of device…</string>
    <string name="pref_group_bco">BCO Connection</string>
    <string name="pref_ip">IP address</string>
    <string name="pref_port">Port</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_init_default">Measurements per wall</string>
    <string name="pref_init_anchor">Measurements per wall (anchor point)</string>
    <string name="pref_init_align">Use anchor alignment</string>
    <string name="pref_misc_unknown_service">Display unknown services</string>
    <string name="pref_misc_use_meta_filter">Filter devices and locations by meta tag</string>
    <string name="pref_misc_meta_filter">Meta tag filter</string>
    <string name="pref_location_scanning">Location Scanning</string>
    <string name="pref_miscellaneous_settings">Miscellaneous settings</string>
    <string name="pref_adf_file">ADF ID</string>
    <string name="pref_registry_utilities">BCO Utilities (use with caution!)</string>
    <string name="pref_delete_device_poses">Delete device poses</string>
    <string name="pref_delete_device_poses_sum">This deletes the poses of all devices</string>
    <string name="pref_delete_location_shapes">Delete location shapes</string>
    <string name="pref_delete_location_shapes_sum">This deletes the shapes and poses of all locations (and Doors, Connections…)</string>
    <string name="button_apply">" Apply"</string>
    <string name="button_cancel">" Cancel"</string>
    <string name="button_clear">" Clear"</string>
    <string name="button_blind_down">{gmd-arrow-downward}\nDown</string>
    <string name="button_blind_stop">{gmd-stop}\nStop</string>
    <string name="button_blind_up">{gmd-arrow-upward}\nUp</string>
    <string name="button_edit_help">Edit the placement of a unit -></string>
    <string name="loading_device">Loading device information…</string>
    <string name="list_settings_title">List Settings</string>
    <string name="list_settings_units_all">Show all units</string>
    <string name="list_settings_units_located">Show only located units</string>
    <string name="list_settings_units_unlocated">Show only unlocated units</string>
    <string name="list_settings_locations_all">Show all locations</string>
    <string name="list_settings_locations_located">Show only located locations</string>
    <string name="list_settings_visualize_distant_blobs">Visualize devices that are not located in the current room</string>
    <string name="toast_permission_not_granted">Necessary permission was denied. Closing BComfy…</string>
    <string name="toast_loading_error">Error while loading local dataset for selected adf!</string>
    <string name="toast_position_update_error">Error while updating position of unit!</string>
    <string name="toast_invalid_last_wall">Not able to finish the room. The first and the last wall need to be perpendicular to each other. Are you missing a wall?</string>
</resources>
