<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_group_bco">

        <EditTextPreference
            android:defaultValue="129.70.135.69"
            android:key="pref_ip"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_ip" />
        <EditTextPreference
            android:defaultValue="4803"
            android:key="pref_port"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_port" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_location_scanning">
        <EditTextPreference
            android:defaultValue="1"
            android:key="pref_init_default"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_init_default" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_init_align"
            android:title="@string/pref_init_align" />

        <EditTextPreference
            android:defaultValue="3"
            android:key="pref_init_anchor"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_init_anchor" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_miscellaneous_settings">
        <ListPreference
            android:defaultValue="@null"
            android:title="@string/pref_adf_file"
            android:key="pref_misc_adf"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_misc_unknown_service"
            android:title="@string/pref_misc_unknown_service" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_misc_use_meta_filter"
            android:title="@string/pref_misc_use_meta_filter" />
        <EditTextPreference
            android:defaultValue="CUSTOM_META_FILTER"
            android:key="pref_misc_meta_filter"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_misc_meta_filter" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_registry_utilities">
        <Preference
            android:key="pref_delete_device_poses"
            android:title="@string/pref_delete_device_poses"
            android:summary="@string/pref_delete_device_poses_sum" />

        <Preference
            android:key="pref_delete_location_shapes"
            android:title="@string/pref_delete_location_shapes"
            android:summary="@string/pref_delete_location_shapes_sum" />
    </PreferenceCategory>

</PreferenceScreen>